Changes for Perl extension DBD-SQLite

1.34_02 to be released
    - Resolved #71311: binding output columns as SQL_BLOB returns
      nothing (ISHIGAKI)

1.34_01 Thu 22 Sep 2011
    - Updated to SQLite 3.7.8 (ISHIGAKI)
    - Made util/getsqlite.pl work properly for SQLite 3.7.5+ (ISHIGAKI)
    - Cookbook: don't use globals (Yuriy Kaminskiy)
    - Resolved #70135 and hopefully other mod_perl/CentOS issues like
      #63873 and #47983, with a patch by MDOOTSON++ (ISHIGAKI)

1.33 Mon 20 May 2011
    - Production release, no changes from 1.32_04

1.32_04 Fri 20 May 2011
    - Updated to SQLite 3.7.6.3 (ISHIGAKI)
    - Made util/getsqlite.pl state that it needs fixing to work for
      SQLite 3.7.5+ when it dies at the last step, and outline what the
      user needs to do manually instead, until getsqlite is fixed (DUNCAND)

1.32_03 Thu 12 May 2011
    - Updated to SQLite 3.7.6.2 (ISHIGAKI)
    - Resolved #67843 for DBD-SQLite: savepoint rollback alters AC
      state (ISHIGAKI)

1.32_02 Mon 7 Mar 2011
    - Updated to SQLite 3.7.5 (ISHIGAKI)
    - Resolved #65267 for DBD-SQLite: Add RTree support option;
      skip fts3/metadata tests if those features are disabled
      (ISHIGAKI)
    - Resolved #65267: Add RTree support option (CJFIELDS)
    - Added sqlite_see_if_its_a_number database handle attribute
      to deal with issues caused by (quoted) bind values against
      numbers such as return values from a function etc. (ISHIGAKI)

1.32_01 Fri 10 Dec 2010
    - Made util/getsqlite.pl work with the amalg distro filename changes
      introd by SQLite 3.7.4, and still with older ones also (DUNCAND)
    - Updated to SQLite 3.7.4 (DUNCAND)
    - Resolved #61355: Fails testing in parallel (ISHIGAKI)
    - Resolved #61361: Problems building 1.31 with system SQLite (ISHIGAKI)
    - Resolved #61117: Supporting database as an alias for dbname in
      DSN (ISHIGAKI)
    - Resolved #62370: Segfaults during operations on disconnected
      handles (ISHIGAKI)